syntax = "proto3";
package dipstick.shadow.v1;

import "dipstick/core/v1/entity.proto";
import "dipstick/shadow/v1/signal.proto";

message ShadowSpec {
  dipstick.core.v1.EntityMeta meta = 1;
  repeated SignalSpec signal = 2;
}
